# zeromq2-x

./: CMakeLists.txt
cmake/: ZeroMQConfig.cmake.in  platform.hpp.in
cmake/Modules/: TestZMQVersion.cmake
include/: zmq.hpp
src/: options.cpp  select.cpp  uuid.cpp  uuid.hpp  zmq.cpp
